default maven structure applied